emoncms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emoncms
spec:
  selector:
    app: emoncms
  ports:
    - port: 8080
      targetPort: 8080
      name: http
